# SoftRobots

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  General.ah  README.html  README.md  STLIB.ah  SoftRobots.ah  SoftRobotsConfig.cmake.in  hooks.json  loadedPlugins.ini  softrobots.html  softrobots.html.backup  softrobots.md  softrobots.pyscn
.github/workflows/: ci.yml  nighly-build.yml  pr-integration.yml  release-build.yml  remove-old-artifacts.yml  single-build.yml
cmake/: environment.cmake  packaging.cmake  utils.cmake
cmake/modules/: FindVRPN.cmake  FindZMQ.cmake
component/: initSoftRobots.cpp  initSoftRobots.h
component/behavior/: Behavior_Files.cmake  SoftRobotsBaseConstraint.cpp  SoftRobotsBaseConstraint.h  SoftRobotsConstraint.cpp  SoftRobotsConstraint.h  SoftRobotsConstraint.inl
component/constraint/: CableConstraint.cpp  CableConstraint.h  CableConstraint.inl  Constraint_Files.cmake  PartialRigidificationConstraint.cpp  PartialRigidificationConstraint.h  PartialRigidificationConstraint.inl  SlidingConstraintActuator.cpp  SlidingConstraintActuator.h  SlidingConstraintActuator.inl  SurfacePressureConstraint.cpp  SurfacePressureConstraint.h  SurfacePressureConstraint.inl  UnilateralPlaneConstraint.cpp  UnilateralPlaneConstraint.h  UnilateralPlaneConstraint.inl
component/constraint/model/: CableModel.cpp  CableModel.h  CableModel.inl  Model.cmake  SlidingModel.cpp  SlidingModel.h  SlidingModel.inl  SurfacePressureModel.cpp  SurfacePressureModel.h  SurfacePressureModel.inl
component/controller/: AnimationEditor.cpp  AnimationEditor.h  AnimationEditor.inl  CommunicationController.cpp  CommunicationController.h  CommunicationController.inl  Controller_Files.cmake  Controller_Links.cmake  DataControllerRobot.cpp  DataControllerRobot.h  DataControllerRobot2.cpp  DataVariationLimiter.cpp  DataVariationLimiter.h  DataVariationLimiter.inl  GameTrakController.cpp  GameTrakController.h  InteractiveControl.cpp  InteractiveControl.h  README.txt  SerialPortBridgeGeneric.cpp  SerialPortBridgeGeneric.h
component/controller/modules/: Network.cpp  Network.h  Serial.cpp  SysTimeWin.h
component/engine/: CenterOfMass.cpp  CenterOfMass.h  CenterOfMass.inl  Engine_Files.cmake  VolumeFromTetrahedrons.cpp  VolumeFromTetrahedrons.h  VolumeFromTetrahedrons.inl  VolumeFromTriangles.cpp  VolumeFromTriangles.h  VolumeFromTriangles.inl
component/forcefield/: AffineRestShapeSpringForceField.cpp  AffineRestShapeSpringForceField.h  AffineRestShapeSpringForceField.inl  Forcefield_Files.cmake  Forcefield_Links.cmake  MappedMatrixForceField.cpp  MappedMatrixForceField.h  MappedMatrixForceField.inl  PREquivalentStiffnessForceField.cpp  PREquivalentStiffnessForceField.h  PREquivalentStiffnessForceField.inl  PartialRigidificationForceField.cpp  PartialRigidificationForceField.h  PartialRigidificationForceField.inl  PipeForceField.cpp  PipeForceField.h  PipeForceField.inl
docs/: README.html  README.md  licence_template.txt  style.css
docs/examples/: plugintests.pyscn
docs/examples/component/: __init__.py
docs/examples/sofaros/: sofaros.py  test_sofaros.py
docs/images/icons/: copyright.txt
docs/sofapython2/thematicalDocs/: tutorial.txt
docs/sofapython3/examples/: plugintests.py3scn
docs/sphinx/: Makefile  conf.py
docs/thematicalDocs/T0-Install/: README.txt
docs/thematicalDocs/T2-FromMeshToSimulation/: index.html  index.md
docs/tutorials/BabyBot/: babybot.pyscn
docs/tutorials/CableGripper/: cablegripper-tuto.html  cablegripper-tuto.md  cablegripper.html  cablegripper.md  finger.py  gripper.py  gripper61.py  step0.pyscn  step1.pyscn  step2.1.pyscn  step2.2.pyscn  step2.pyscn  step3.pyscn  step4.1.pyscn  step4.pyscn  step5.pyscn  step6.0.pyscn  step6.1.pyscn  step6.2.pyscn  step6.pyscn  step7.0.pyscn
docs/tutorials/CableGripper-Tutorial/: cablegripper.md  cablegripper.pyscn  cablegripper_animated.md  controller.py  cube.py  finger-step2.py  finger.py  finger_old  finger_old.py  fingercontroller.py  fingerstep2.py  fingerstep5.py  floor.py  step1.pyscn  step2.pyscn  step3.pyscn  step4.pyscn
docs/tutorials/CircularRobot/: circularrobot.py  circularrobot.py3
docs/tutorials/ClosedLoop/: ar_tracker.py  tripodRestPosition.json
docs/tutorials/DiamondRobot/: DiamondRobot.py3scn
docs/tutorials/FirstSteps/: firststeps-tuto.html  firststeps-tuto.md  firststeps-tuto.pyscn
docs/tutorials/PneunetGripper-Tutorial/: pneunetgripper.md  step2-forceFieldAndMass.pyscn  step3-stiffLayer.pyscn  step4-boundaryConditions.pyscn  step5-timeIntegrationAndMatrixSolver.pyscn  step6-pneumaticActuatorAndPythonScriptController.pyscn  step7-grabTheCube.pyscn
docs/tutorials/Trunk/: trunk.py  (+1 more)
examples/: .scene-tests  plugintests.py
examples/component/: __init__.py
examples/dualgraph/: test1.py  toto.py
examples/sofaros/: README.html  README.md  recv.py  sofaros.py
examples/tutorials/: README.md
extensions/CUDA/: CMakeLists.txt  SoftRobots.CUDAConfig.cmake.in
extensions/CUDA/src/SoftRobots.CUDA/: init.cpp  init.h
extensions/CUDA/src/SoftRobots.CUDA/component/forcefield/: CUDAPREquivalentStiffnessForceField.cpp  CUDAPartialRigidificationForceField.cpp  CUDAPipeForceField.cpp
extensions/CUDA/src/SoftRobots/CUDA/: config.h.in  init.cpp  init.h
extensions/CUDA/src/SoftRobots/CUDA/component/forcefield/: CUDAPREquivalentStiffnessForceField.cpp  CUDAPartialRigidificationForceField.cpp  CUDAPipeForceField.cpp
python/softrobots/: __init__.py  cableActuation.py
python3/softrobots/: __init__.py
tests/: CMakeLists.txt  TestExamplesScenes.py
tests/component/constraint/: ConstraintTest.cmake  SurfacePressureConstraintTest.cpp  UnilateralPlaneConstraintTest.cpp
tests/component/constraint/scenes/: SurfacePressureConstraint.scn
tests/component/controller/: AnimationEditorTest.cpp  ControllerTest.cmake  DataVariationLimiterTest.cpp  SerialPortBridgeGenericTest.cpp
tests/component/engine/: EngineTest.cmake  VolumeFromTetrahedronsTest.cpp  VolumeFromTrianglesTest.cpp
tests/component/forcefield/: ForcefieldTest.cmake
tools/: builhtmldocs.py  genindex.py  postinstall_fixup_macOS.sh
(+1035 files in other folders)
